--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <title>ShopBuzz - Your Dream Shop!</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="shortcut icon" href="image/shop.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <style>
     *{
-        font-family: "Roboto", sans-serif;
+        font-family: "Open Sans", sans-serif;
     }
 </style>
 </head>
 <body>
     <header>
         <nav class="h-14 bg-[#FFF2BC] flex items-center justify-between px-5">
-            <div>
-               <a href="#"> <h1 class="text-3xl font-semibold text-[#442A00]">Shop<span class="text-[#D84012]">B</span>u<span class="text-[#D84012]">zz</span></h1></a>
+            <div  class="flex items-center justify-center gap-2.5">
+                <a href="#"><img class="h-17 w-20" src="images/ShopBuzz__1_-removebg-preview.png"></a>
+                <a href="#" class=""> <h1 class="text-3xl font-semibold text-gray-800">Shop<span class="text-red-600">B</span>u<span class="text-red-600">zz</span></h1></a>
             </div>
             <div>
                 <ul class="flex items-center -ml-28 text-lg">
@@ -31,7 +33,8 @@
                 </ul>
             </div>
             <div>
-                <button class="hover:bg-[#FFEEA7] h-14 px-3 flex items-center text-[#442A00] hover:cursor-pointer">Sign-Up</button>
+                <button class="shadow1 bg-white px-4 py-1 text-[#442A00] rounded-lg text-lg mr-2 border-2 border-[#442A00] hover:bg-[#FFEEA7]">Sign-Up</button>
+                <button class="shadow2 bg-white px-4 py-1 text-[#442A00] rounded-lg text-lg mr-2 border-2 border-[#442A00] hover:bg-[#FFEEA7]">Login</button>
             </div>
         </nav>
     </header>
