--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShopBuzz - Your Dream Shop!</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="image/shop.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/ShopBuzz__1_-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.13/dist/full.min.css" rel="stylesheet" type="text/css" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <style>
@@ -36,7 +37,52 @@
                 <button class="shadow1 bg-white px-4 py-1 text-[#442A00] rounded-lg text-lg mr-2 border-2 border-[#442A00] hover:bg-[#FFEEA7]">Sign-Up</button>
                 <button class="shadow2 bg-white px-4 py-1 text-[#442A00] rounded-lg text-lg mr-2 border-2 border-[#442A00] hover:bg-[#FFEEA7]">Login</button>
             </div>
+            <div class="dropdown">
+  <button class="dropbtn">🌐</button>
+  <div class="dropdown-content">
+    <a href="#">English</a>
+    <a href="#">Bangla</a>
+  </div>
+</div>
         </nav>
+        <div class="carousel w-full h-96">
+            <div id="slide1" class="carousel-item relative w-full">
+              <img
+                src="images/burger-4165634_1280.jpg"
+                class="w-full object-cover" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide4" class="btn btn-circle">❮</a>
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+              <img
+                src="images/burger-4226039_1280.jpg"
+                class="w-full object-cover" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide1" class="btn btn-circle">❮</a>
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+              <img
+                src="images/burger-4683373_1280.jpg"
+                class="w-full object-cover" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide2" class="btn btn-circle">❮</a>
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="slide4" class="carousel-item relative w-full">
+              <img
+                src="images/burger-5145112_1280.jpg"
+                class="w-full object-cover" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide3" class="btn btn-circle">❮</a>
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
     </header>
     <main>
 
