--- a/index.html
+++ b/index.html
@@ -50,13 +50,63 @@
           <h1 style="color: red;font-weight: 900;font-size: 60px;">Welcome to ShopBuzz</h1>
         </div>
         <div>
-        <img src="images/Screenshot_2024-10-17_110117-removebg-preview.png"><img src="images/Screenshot_2024-10-17_114653-removebg-preview.png" alt="">
-              </div>
-            </div>
-          </div>
+            <div class="carousel w-full">
+  <div id="slide1" class="carousel-item relative w-full">
+    <img
+      src="images/R.jpeg"
+      class="w-full h-[400px] object-cover" />
+    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+      <a href="#slide4" class="btn btn-circle">❮</a>
+      <a href="#slide2" class="btn btn-circle">❯</a>
+    </div>
+  </div>
+  <div id="slide2" class="carousel-item relative w-full">
+    <img
+      src="images/360_F_589704609_b84XoVDaeopctL2Iz0lG4IQT86Dzm7xz.jpg"
+      class="w-full h-[400px] object-cover" />
+    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+      <a href="#slide1" class="btn btn-circle">❮</a>
+      <a href="#slide3" class="btn btn-circle">❯</a>
+    </div>
+  </div>
+  <div id="slide3" class="carousel-item relative w-full">
+    <img
+      src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp"
+      class="w-full" />
+    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+      <a href="#slide2" class="btn btn-circle">❮</a>
+      <a href="#slide4" class="btn btn-circle">❯</a>
+    </div>
+  </div>
+  <div id="slide4" class="carousel-item relative w-full">
+    <img
+      src="https://img.daisyui.com/images/stock/photo-1665553365602-b2fb8e5d1707.webp"
+      class="w-full" />
+    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+      <a href="#slide3" class="btn btn-circle">❮</a>
+      <a href="#slide1" class="btn btn-circle">❯</a>
+    </div>
+  </div>
+</div>
+        </div>
     </header>
     <main>
-
+        <section class="">
+            <div class="grid grid-cols-1 gap-5">
+                <div class="h-32 w-32 bg"></div>
+                <div class="h-32 w-32 bg-white border-2 border-black"></div>
+                <div class="h-32 w-32 bg-red-600 border-2 border-black"></div>
+                <div class="h-32 w-32 bg-white border-2 border-black"></div>
+                <div class="h-32 w-32 bg-red-600 border-2 border-black"></div>
+            </div>
+            <div class="grid grid-cols-1 gap-5">
+                <div class="h-32 w-32 bg flex justify-center"></div>
+                <div class="h-32 w-32 bg-white border-2 border-black"></div>
+                <div class="h-32 w-32 bg-red-600 border-2 border-black"></div>
+                <div class="h-32 w-32 bg-white border-2 border-black"></div>
+                <div class="h-32 w-32 bg-red-600 border-2 border-black"></div>
+            </div>
+        </section>
     </main>
     <footer>
 
