--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </style>
 </head>
 <body>
-    <header>
+    <header class="relative">
         <nav class="shadow3 h-14 bg-white flex items-center justify-between px-5 ">
             <div  class="flex items-center justify-center gap-2.5">
                 <a href="#"><img class="h-17 w-20" src="images/ShopBuzz__1_-removebg-preview.png"></a>
@@ -46,8 +46,8 @@
   </div>
 </div>
         </nav>
-        <div>
-          <h1 style="color: red;font-weight: 900;font-size: 60px;">Welcome to ShopBuzz</h1>
+        <div class="absolute z-50 top-[45%] right-[27%]">
+          <h1 style="color: white;font-weight: 900;font-size: 60px;text-shadow: 2px 2px 2px black;">Welcome to ShopBuzz</h1>
         </div>
         <div>
             <div class="carousel w-full">
@@ -91,21 +91,9 @@
         </div>
     </header>
     <main>
-        <section class="">
-            <div class="grid grid-cols-1 gap-5">
-                <div class="h-32 w-32 bg"></div>
-                <div class="h-32 w-32 bg-white border-2 border-black"></div>
-                <div class="h-32 w-32 bg-red-600 border-2 border-black"></div>
-                <div class="h-32 w-32 bg-white border-2 border-black"></div>
-                <div class="h-32 w-32 bg-red-600 border-2 border-black"></div>
-            </div>
-            <div class="grid grid-cols-1 gap-5">
-                <div class="h-32 w-32 bg flex justify-center"></div>
-                <div class="h-32 w-32 bg-white border-2 border-black"></div>
-                <div class="h-32 w-32 bg-red-600 border-2 border-black"></div>
-                <div class="h-32 w-32 bg-white border-2 border-black"></div>
-                <div class="h-32 w-32 bg-red-600 border-2 border-black"></div>
-            </div>
+        <section>
+          <h1 class="mt-5 mx-10 text-5xl text-center font-bold text-red-600" style="text-shadow: 2px 2px 2px black;"><u>Recommended</u></h1>
+            
         </section>
     </main>
     <footer>
