--- a/index.html
+++ b/index.html
@@ -92,8 +92,55 @@
     </header>
     <main>
         <section>
-          <h1 class="mt-5 mx-10 text-5xl text-center font-bold text-red-600" style="text-shadow: 2px 2px 2px black;"><u>Recommended</u></h1>
-            
+          <h1 class="mt-5 mx-10 text-5xl text-center font-bold text-red-600""><u>Recommended</u></h1>
+          <div class="card bg-base-100 w-96 shadow-xl mx-5">
+            <figure>
+              <img
+                src="images/R.jpeg"
+                alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-red-600">Chicken Burger</h2>
+              <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>170</p>
+              <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>200</i></del></p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 w-96 shadow-xl mx-5 mt-5 flex justify-center gap-6">
+            <figure>
+              <img
+                src="images/l-intro-1642720908.jpg"
+                alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-red-600">French Fries</h2>
+              <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>100</p>
+              <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>160</i></del></p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="card bg-base-100 w-96 shadow-xl mx-5 mt-5">
+            <figure>
+              <img
+                src="images/l-intro-1642720908.jpg"
+                alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-red-600">French Fries</h2>
+              <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>100</p>
+              <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>160</i></del></p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+              </div>
+            </div>
+          </div>
         </section>
     </main>
     <footer>
