Upgraded Cards added (3 rows)

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </div>
             <div class="dropdown">
   <button class="dropbtn"><i class="fa-solid fa-language"></i></button>
+  <button><i class="fa-solid fa-cart-shopping hover:bg-red-600 hover:text-white h-14 px-3 flex items-center text-[#442A00] hover:cursor-pointer"></i></button>
   <div class="dropdown-content">
     <a href="#">English</a>
     <a href="#">Bangla</a>
@@ -93,54 +94,168 @@
     <main>
         <section>
           <h1 class="mt-5 mx-10 text-5xl text-center font-bold text-red-600""><u>Recommended</u></h1>
-          <div class="card bg-base-100 w-96 shadow-xl mx-5">
-            <figure>
-              <img
-                src="images/R.jpeg"
-                alt="Shoes" />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title text-red-600">Chicken Burger</h2>
-              <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>170</p>
-              <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>200</i></del></p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
-                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+          <!-- First Row -->
+<div class="flex justify-center gap-6 mt-8">
+            <!-- First Card -->
+            <div class="card bg-base-100 w-96 shadow-xl">
+              <figure class="h-52">
+                <img
+                  src="images/R.jpeg"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-red-600">Chicken Burger</h2>
+                <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>170</p>
+                <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>200</i></del></p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+                  <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card bg-base-100 w-96 shadow-xl mx-5 mt-5 flex justify-center gap-6">
-            <figure>
-              <img
-                src="images/l-intro-1642720908.jpg"
-                alt="Shoes" />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title text-red-600">French Fries</h2>
-              <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>100</p>
-              <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>160</i></del></p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
-                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+            <!-- Second Card -->
+            <div class="card bg-base-100 w-96 shadow-xl">
+              <figure class="h-52">
+                <img
+                  src="images/l-intro-1642720908.jpg"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-red-600">French Fries</h2>
+                <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>100</p>
+                <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>160</i></del></p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+                  <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card bg-base-100 w-96 shadow-xl mx-5 mt-5">
-            <figure>
-              <img
-                src="images/l-intro-1642720908.jpg"
-                alt="Shoes" />
-            </figure>
-            <div class="card-body">
-              <h2 class="card-title text-red-600">French Fries</h2>
-              <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>100</p>
-              <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>160</i></del></p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
-                <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+            <!-- Third Card -->
+            <div class="card bg-base-100 w-96 shadow-xl">
+              <figure class="h-52">
+                <img
+                  src="images/OIP (1).jpeg"
+                  alt="Shoes" />
+              </figure>
+              <div class="card-body">
+                <h2 class="card-title text-red-600">Papperoni Pizza</h2>
+                <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>699</p>
+                <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>899</i></del></p>
+                <div class="card-actions justify-end">
+                  <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+                  <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+                </div>
               </div>
             </div>
-          </div>
+</div>
+ <!-- Second Row -->
+ <div class="flex justify-center gap-6 mt-8">
+  <!-- First Card -->
+  <div class="card bg-base-100 w-96 shadow-xl">
+    <figure class="h-52">
+      <img
+        src="images/R (1).jpeg"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title text-red-600">Hot-Dog</h2>
+      <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>80</p>
+      <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>100</i></del></p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+      </div>
+    </div>
+  </div>
+  <!-- Second Card -->
+  <div class="card bg-base-100 w-96 shadow-xl">
+    <figure class="h-52">
+      <img
+        src="images/bucket-frid-chicken.png"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title text-red-600">Chicken Fry Bucket (20pcs)</h2>
+      <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>600</p>
+      <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>800</i></del></p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+      </div>
+    </div>
+  </div>
+  <!-- Third Card -->
+  <div class="card bg-base-100 w-96 shadow-xl">
+    <figure class="h-52">
+      <img
+        src="images/OIP (2).jpeg"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title text-red-600">Chow Mein</h2>
+      <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>360</p>
+      <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>400</i></del></p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Second Row -->
+<div class="flex justify-center gap-6 mt-8">
+  <!-- First Card -->
+  <div class="card bg-base-100 w-96 shadow-xl">
+    <figure class="h-52">
+      <img
+        src="images/R (2).jpeg"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title text-red-600">Fried Rice</h2>
+      <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>220</p>
+      <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>280</i></del></p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+      </div>
+    </div>
+  </div>
+  <!-- Second Card -->
+  <div class="card bg-base-100 w-96 shadow-xl">
+    <figure class="h-52">
+      <img
+        src="images/shengjianbao-1ab387871fee494ab631b5b210d10a16.jpg"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title text-red-600">Chicken Dumplings(5pcs)</h2>
+      <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>160</p>
+      <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>200</i></del></p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+      </div>
+    </div>
+  </div>
+  <!-- Third Card -->
+  <div class="card bg-base-100 w-96 shadow-xl">
+    <figure class="h-52">
+      <img
+        src="images/maxresdefault.jpg"
+        alt="Shoes" />
+    </figure>
+    <div class="card-body">
+      <h2 class="card-title text-red-600">Thai Soup</h2>
+      <p class="text-3xl text text-red-600"><i class="fa-solid fa-bangladeshi-taka-sign"></i>180</p>
+      <p class="text-red-600"><del><i class="fa-solid fa-bangladeshi-taka-sign"></i>200</i></del></p>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Buy Now</button>
+        <button class="btn btn-primary text-white bg-red-600 border-red-600 hover:bg-red-700">Add to cart</button>
+      </div>
+    </div>
+  </div>
+</div>
         </section>
     </main>
     <footer>
